# phpl

./: .editorconfig  Cargo.toml  LICENSE  README.md  TODO  index.php
evaluator/: Cargo.toml
evaluator/src/: environment.rs  errors.rs  evaluator.rs  helpers.rs  lib.rs  php_type.rs  php_value.rs  program.rs  scope.rs  warnings.rs
evaluator/src/expressions/: function_call.rs  method_call.rs  mod.rs  new.rs  reference.rs
evaluator/src/helpers/: callable.rs  callable_helpers.rs  function_call.rs  helpers.rs  mod.rs  object.rs
evaluator/src/php_data_types/: argument_type.rs  error.rs  mod.rs  primitive_data_types.rs
evaluator/src/php_data_types/objects/: class.rs  mod.rs
evaluator/src/php_value/: argument_type.rs  mod.rs  objects.rs  php_argument_type.rs  php_object.rs  php_value.rs  primitive_data_types.rs  types.rs  value.rs
evaluator/src/php_value/objects/: class.rs  (+1 more)
evaluator/src/statements/: class.rs  mod.rs  traits.rs
php-parser/: Cargo.toml
php-parser/src/lexer/: byte_string.rs  token.rs
php-parser/src/lexer/state/: source.rs
php-parser/src/parser/: error.rs  expressions.rs
php-parser/src/parser/ast/: arguments.rs  attributes.rs  classes.rs  comments.rs  constant.rs  control_flow.rs  data_type.rs  declares.rs  enums.rs  functions.rs  goto.rs  identifiers.rs  interfaces.rs  literals.rs  loops.rs  mod.rs  modifiers.rs  namespaces.rs  operators.rs  properties.rs  traits.rs  try_block.rs  utils.rs  variables.rs
php-parser/src/parser/internal/: functions.rs  parameters.rs  precedences.rs  traits.rs  utils.rs
phpl/: Cargo.toml
phpl/src/: main.rs
(+2 files in other folders)
