[package]
name = "php-parser-rs"
version = "0.1.3"
authors = [ "Ryan Chandler <https://github.com/ryangjchandler>"]

[dependencies]
ariadne = "0.1.5"
clap = { version = "4.0.32", features = ["derive"] }
schemars = "0.8.11"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
